<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CaseHub</string>
    
    <!-- NAVIGATION DRAWER -->
    <string-array name="titles_array">
        <item>Greenies</item>
        <item>Laundry</item>
        <item>Schedule</item>
        <item>Campus Map</item>
        <item>Dining Halls</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
        
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    
    <!-- SCHEDULER -->
    <string name="login_prompt">Please log in with your Case ID.</string>
    <string name="username">Case ID</string>
    <string name="password">Password</string>
    <string name="login_button">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    
    
    <string name="calendar_export_title">Export to Google Calender</string>
    <string name="calendar_export">Export to Calendar</string>
    <string name="export">Export</string>
    <string name="pick_start_date">Start Date</string>
    <string name="pick_end_date">End Date</string>
    
    <string name="autosilent_title">AutoSilent Settings</string>
    <string-array name="autosilent_options">
        <item>Set to silent during classes</item>
        <item>Set to vibrate during classes</item>
        <item>Turn off AutoSilent</item>
    </string-array>
    
    <string name="schedule_refresh">Refresh</string>
    <string name="schedule_silent">AutoSilent Settings</string>
    
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUES</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    
    <string name="time7am">7a</string>
    <string name="time8am">8a</string>
    <string name="time9am">9a</string>
    <string name="time10am">10a</string>
    <string name="time11am">11a</string>
    <string name="time12pm">12p</string>
    <string name="time1pm">1p</string>
    <string name="time2pm">2p</string>
    <string name="time3pm">3p</string>
    <string name="time4pm">4p</string>
    <string name="time5pm">5p</string>
    <string name="time6pm">6p</string>
    <string name="time7pm">7p</string>
    <string name="time8pm">8p</string>
    <string name="time9pm">9p</string>

	
    <!-- GREENIE -->
    <string-array name="routes_array">
        <item>101st Service</item>
        <item>Circle Link Route</item>
        <item>Commuter Shuttle</item>
        <item>Evening Shuttle North</item>
    	<item>Evening Shuttle South</item>
    	<item>Heights AM</item>
    	<item>Route B</item>
    	<item>UCRC Route</item>
    </string-array>
    <string name="action_fav">Show/Hide Favorites</string>
    
    <!-- LAUNDRY -->
    <string name="refresh_houses">Refresh list of houses</string>
    <string name="laundry_alarm_title">Set laundry alarm</string>
    <string name="set_alarm">Set Alarm</string>
    
    <!-- DINING -->
    <string-array name="dining_array">
        <item>Leutner</item>
        <item>Fribley</item>
        <item>Tomlinson</item>
        <item>BRB Cafe</item>
    	<item>WRB Cafe</item>
    </string-array>
    
    <!-- CAMPUS MAP -->
    <string-array name="maptypearray">
        <item>@string/academic</item>
        <item>@string/administrative</item>
        <item>@string/residential</item>
        <item>@string/commons</item>
        <item>@string/restaurants</item>
        <item>@string/other</item>
        <item>@string/parkinglots</item>
        <item>@string/hospital</item>
        <item>@string/athletic</item>
    </string-array>
    <string name="academic">Academic</string>
    <string name="administrative">Administrative</string>
    <string name="residential">Residential</string>
    <string name="commons">Commons</string>
    <string name="restaurants">Restaurants</string>
    <string name="other">Other</string>
    <string name="parkinglots">Parking Lots</string>
    <string name="hospital">Hospital</string>
    <string name="athletic">Athletic</string>
    <string name="searchbox">Search for a location</string>
  	<string name="searchaction">Search</string>
  	<string name="displayaction">Show/Hide Categories</string>
  	<string name="othernames">Other Names:</string>
  	<string name="entities">What\'s Here:</string>
  	<string name="category">Category:</string>
  	<string name="getdirs">Get Directions To</string>
</resources>
