<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:id="@+id/dayLabelsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" >

        <RelativeLayout
            android:id="@+id/timeHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sundayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/sundayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/sunday"
                android:textStyle="bold" />

            <View
                android:id="@+id/dayMarkerView"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mondayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/mondayTextView"
                style="@style/DayHeader"
                android:text="@string/monday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tuesdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/tuesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/tuesday"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wednesdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/wednesdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/wednesday"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/thursdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/thursdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/thursday"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fridayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/fridayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/friday"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/saturdayHeaderRelativeLayout"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/saturdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="6dp"
                android:text="@string/saturday"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/dividerView"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dayLabelsLinearLayout"
        android:background="@color/border" />

    <ScrollView
        android:id="@+id/scheduleScrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/dividerView"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:padding="0dp"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/scheduleRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp" >

            <LinearLayout
                android:id="@+id/scheduleSplitterRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:padding="0dp" >

                <RelativeLayout
                    android:id="@+id/hoursRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="0dp" >

                    <TextView
                        android:id="@+id/time6amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="360dp"
                        android:gravity="center"
                        android:text="@string/time6am" />

                    <TextView
                        android:id="@+id/time7amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="420dp"
                        android:gravity="center"
                        android:text="@string/time7am" />

                    <TextView
                        android:id="@+id/time8amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="480dp"
                        android:gravity="center"
                        android:text="@string/time8am" />

                    <TextView
                        android:id="@+id/time9amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="540dp"
                        android:gravity="center"
                        android:text="@string/time9am" />

                    <TextView
                        android:id="@+id/time10amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="600dp"
                        android:gravity="center"
                        android:text="@string/time10am" />

                    <TextView
                        android:id="@+id/time11amTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="660dp"
                        android:gravity="center"
                        android:text="@string/time11am" />

                    <TextView
                        android:id="@+id/time12pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="720dp"
                        android:gravity="center"
                        android:text="@string/time12pm" />

                    <TextView
                        android:id="@+id/time1pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="780dp"
                        android:gravity="center"
                        android:text="@string/time1pm" />

                    <TextView
                        android:id="@+id/time2pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="840dp"
                        android:gravity="center"
                        android:text="@string/time2pm" />

                    <TextView
                        android:id="@+id/time3pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="900dp"
                        android:gravity="center"
                        android:text="@string/time3pm" />

                    <TextView
                        android:id="@+id/time4pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="960dp"
                        android:gravity="center"
                        android:text="@string/time4pm" />

                    <TextView
                        android:id="@+id/time5pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1020dp"
                        android:gravity="center"
                        android:text="@string/time5pm" />

                    <TextView
                        android:id="@+id/time6pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1080dp"
                        android:gravity="center"
                        android:text="@string/time6pm" />

                    <TextView
                        android:id="@+id/time7pmTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="6dp"
                        android:layout_marginTop="1140dp"
                        android:gravity="center"
                        android:text="@string/time7pm" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/sundayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mondayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tuesdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/wednesdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/thursdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fridayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/saturdayRelativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/currentTimeMarkerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="100dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="0dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1" />

                <View
                    android:id="@+id/currentTimeLineView"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="14"
                    android:background="@color/highlight" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>