<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/default_building" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name" />

    <TextView
        android:id="@+id/extra_names_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="4dp"
        android:text="@string/othernames"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/extra_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/extra_names_label"
        android:layout_below="@+id/extra_names_label" />

    <TextView
        android:id="@+id/entities_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/extra_names"
        android:layout_below="@+id/extra_names"
        android:layout_marginTop="4dp"
        android:text="@string/entities"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/entities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/entities_label"
        android:layout_below="@+id/entities_label" />

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/entities"
        android:layout_below="@+id/entities"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type_label"
        android:layout_below="@+id/type_label" />

    <Button
        android:id="@+id/getdir"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name"
        android:layout_alignRight="@+id/image"
        android:text="@string/getdirs" />

</RelativeLayout>